# WatchTower

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
config/: checks.yaml.example  targets.yaml.example
watchtower/: alerts.py  health.py  monitor.py  oct_down_alert.py  peers_monitor.py  report.py
watchtower/checks/: __init__.py  auth.py  disk.py  fail2ban.py  memory.py  oct_liveness.py  oct_ws_liveness.py  oom.py  peers.py  process_rss.py  services.py  ssl.py  uptime.py  wallets.py
